--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@nestjs/typeorm": "9.0.1",
     "apple-signin-auth": "1.7.4",
     "bcryptjs": "2.4.3",
+    "cache-manager": "^4.1.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
     "fb": "2.0.0",
@@ -67,6 +68,7 @@
     "@nestjs/schematics": "9.0.1",
     "@nestjs/testing": "9.0.11",
     "@types/bcryptjs": "2.4.2",
+    "@types/cache-manager": "^4.0.2",
     "@types/express": "4.17.13",
     "@types/facebook-js-sdk": "3.3.5",
     "@types/jest": "28.1.8",
